resources/k8s/webserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      imagePullSecrets:
        - name: gitlab-registry-creds
      containers:
        - name: webserver
          image: registry.gitlab.com/dosayles/imgest-mesh/nginx-itworks:0.1.0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
