resources/k8s/webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  labels:
    app: webserver

spec:
  selector:
    app: webserver

  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP

  type: ClusterIP
