resources/k8s/webserver/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webserver

spec:
  to:
    kind: Service
    name: webserver

  port:
    targetPort: http
